--- a/index.html
+++ b/index.html
@@ -8,50 +8,44 @@
     <title>12Bool</title>
   </head>
   <body class="debug">
-    <div class="row-1">
-      <div class="container">
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-      </div>
+    <div class="row">
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
     </div>
-    <div class="row-2">
-      <div class="container">
-        <div class="col-12"><p>12 col</p></div>
-      </div>
+    <div class="row">
+      <div class="col-12"><p>12 col</p></div>
     </div>
-    <div class="row-3">
-      <div class="container">
-        <div class="col-8"><p>8 col</p></div>
-        <div class="col-2"><p>2 col</p></div>
-        <div class="col-2"><p>2 col</p></div>
-      </div>
+    <div class="row">
+      <div class="col-8"><p>8 col</p></div>
+      <div class="col-2"><p>2 col</p></div>
+      <div class="col-2"><p>2 col</p></div>
     </div>
-    <div class="row-4">
-      <div class="container">
-        <div class="col-1"><p>1 col</p></div>
-        <div class="col-2"><p>2 col</p></div>
-        <div class="col-2"><p>2 col</p></div>
-        <div class="col-6"><p>6 col</p></div>
-        <div class="col-1"><p>1 col</p></div>
-      </div>
+    <div class="row">
+      <div class="col-1"><p>1 col</p></div>
+      <div class="col-2"><p>2 col</p></div>
+      <div class="col-2"><p>2 col</p></div>
+      <div class="col-6"><p>6 col</p></div>
+      <div class="col-1"><p>1 col</p></div>
     </div>
-    <div class="row5">
-      <div class="container">
-        <div id="ftr"class="col-1"><p>Nested</p><p>2 col</p></div>
-        <div id="ftr"class="col-1"><p>Nested</p><p>2 col</p></div>
-        <div id="ftr"class="col-4"><p>Nested 8 col</p></div>
-        <div id="ftr"class="col-3"><p>Nested 6 col</p></div>
-        <div id="ftr"class="col-3"><p>Nested 6 col</p></div>
+    <div class="row">
+      <div class="col-6 padding">
+        <div class="col-2 nested"><p>Nested</p><p>2 col</p></div>
+        <div class="col-2 nested "></div>
+        <div class="col-8 nested"></div>
+      </div>
+      <div class="col-6 padding">
+        <div class="col-6 nested"></div>
+        <div class="col-6 nested"></div>
       </div>
     </div>
 
