Completo layout 12bool

--- a/index.html
+++ b/index.html
@@ -9,43 +9,43 @@
   </head>
   <body class="debug">
     <div class="row">
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-1"><p class="top120">1 col</p></div>
     </div>
     <div class="row">
-      <div class="col-12"><p>12 col</p></div>
+      <div class="col-12"><p class="middle140">12 col</p></div>
     </div>
     <div class="row">
-      <div class="col-8"><p>8 col</p></div>
-      <div class="col-2"><p>2 col</p></div>
-      <div class="col-2"><p>2 col</p></div>
+      <div class="col-8"><p class="middle140">8 col</p></div>
+      <div class="col-2"><p class="middle-140">2 col</p></div>
+      <div class="col-2"><p class="middle-140">2 col</p></div>
     </div>
     <div class="row">
-      <div class="col-1"><p>1 col</p></div>
-      <div class="col-2"><p>2 col</p></div>
-      <div class="col-2"><p>2 col</p></div>
-      <div class="col-6"><p>6 col</p></div>
-      <div class="col-1"><p>1 col</p></div>
+      <div class="col-1"><p class="middle-140">1 col</p></div>
+      <div class="col-2"><p class="middle-140">2 col</p></div>
+      <div class="col-2"><p class="middle-140">2 col</p></div>
+      <div class="col-6"><p class="middle-140">6 col</p></div>
+      <div class="col-1"><p class="middle-140">1 col</p></div>
     </div>
     <div class="row">
       <div class="col-6 padding">
-        <div class="col-2 nested"><p>Nested</p><p>2 col</p></div>
-        <div class="col-2 nested "></div>
-        <div class="col-8 nested"></div>
+        <div id="white"class="col-2 nested"><p class="middle-140">Nested</p><p>2 col</p></div>
+        <div id="white"class="col-2 nested "><p class="middle-140">Nested</p><p>2 col</p></div>
+        <div id="white"class="col-8 nested"><p class="middle-140">Nested 8 col</p></div>
       </div>
       <div class="col-6 padding">
-        <div class="col-6 nested"></div>
-        <div class="col-6 nested"></div>
+        <div id="white"class="col-6 nested"><p class="middle-140">Nested 6 col</p></div>
+        <div id="white"class="col-6 nested"><p class="middle-140">Nested 6 col</p></div>
       </div>
     </div>
 
