Aggiunta mediaquery xs_md_lg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="debug">
     <div class="row">
-      <div class="col-1"><p class="top120">1 col</p></div>
+      <div class="col-lg-1"><p class="top120">1 col</p></div>
       <div class="col-1"><p class="top120">1 col</p></div>
       <div class="col-1"><p class="top120">1 col</p></div>
       <div class="col-1"><p class="top120">1 col</p></div>
